src/ApiGateways/Envoy/config/mobileshopping/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: eshop_backend_route
            virtual_hosts:
            - name: eshop_backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/c/"
                route:
                  prefix_rewrite: "/catalog-api/"
                  cluster: catalog
              - match:
                  prefix: "/catalog-api/"
                route:
                  cluster: catalog
              - match:
                  prefix: "/o/"
                route:
                  prefix_rewrite: "/ordering-api/"
                  cluster: ordering 
              - match:
                  prefix: "/ordering-api/"
                route:
                  cluster: ordering                  
              - match:
                  prefix: "/b/"
                route:
                  prefix_rewrite: "/basket-api/"
                  cluster: basket
              - match:
                  prefix: "/basket-api/"
                route:
                  cluster: basket                  
              - match:
                  prefix: "/"
                route:
                  prefix_rewrite: "/"
                  cluster: shoppingagg
          http_filters:
          - name: envoy.router            
  clusters:
  - name: shoppingagg
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: webshoppingagg
        port_value: 80
  - name: catalog
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: catalog-api
        port_value: 80
  - name: basket
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: basket-api
        port_value: 80        
  - name: ordering
    connect_timeout: 0.25s
    type: logical_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: ordering-api
        port_value: 80
